--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>SpringMVC-Demo-01</module>
         <module>SpringMVC-Demo-02</module>
+        <module>SpringMVC-Demo-03</module>
     </modules>
     <packaging>pom</packaging>
 
